--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,51 +1,38 @@
 body{
     font-family: Arial, sans-serif;
 }
-nav {
+.mask{
     width: 100%;
-    height: 60px;
-    background: #344051;
+    height: 100%;
+   background: #eee;
+    position: fixed;
+    top: 0;
+z-index: 100;
+    transition: 0.6s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.logo{
-    color: #fff;
-    font-size: 30px;
-    line-height: 60px;
-    padding-left: 388px;
-     float:left;
-}
-.menu{
-    float:left;
-    padding-left: 432px;
+
+.loader{
+    width: 70px;
+    height: 70px;
+    border: 10px solid rgba(125,125,232,0.9);
+    border-radius: 50%;
+    border-left-color: #0D47A1;
+       position: relative;
+       animation: loader 1.3s linear infinite;
     
 }
-.menu li{
-    float: left;
-     line-height: 60px;
-    color: #fff;
-    margin-right: 40px;
-    font-size: 16px;
-    text-transform: uppercase;
+@keyframes loader {
+    100% {
+        transform: rotate(360deg);
+    }
 }
-.main{
-    width: 100%;
-    height: calc(100% - 60px);
-    background: url(../img/ten.png) 90% 870px no-repeat, url(../img/Boy.png) 90% 100%/auto 85% no-repeat, url(../img/%D0%A4%D0%BE%D0%BD.jpg) center/cover no-repeat;
+.hide {
+    opacity: 0;
 }
-.title_container{
-    float: left;
-    margin: 432px 0px 0px 404px;
-    color: #2c384a;
-    text-align: center;
-}
-.title_container h1{
-    font-size: 60px;
-    font-weight: bold;
-}
-.title_container h4{
-    margin-top: 40px;
-    font-size:  22px;
-    color: #79818d;
-}
+
 .title_container input{
     height: 40px;
     text-align: center;
@@ -56,7 +43,97 @@ nav {
     font-size: 13px;
     padding: 0px 16px;
     margin: 58px 28px 0px 14px;
+    font-weight: bold;
+    z-index: 2;
 }
+nav {
+    width: 100%;
+    height: 60px;
+    background: #344051;
+    position: fixed;
+    z-index: 3;
+}
+
+.Zap img{
+    position: absolute;
+    left: 367px;
+    max-height: 55px; 
+    width: 240px;
+    -webkit-animation: Zap 1s;
+    -o-animation: Zap 1st;
+    animation: Zap 1s;
+        
+}
+
+.logo{
+    color: #fff;
+    font-size: 30px;
+    line-height: 50px;
+    padding-left: 388px;
+     float:left;
+     position: relative;
+    z-index: 9;
+    -webkit-animation: comming 3s ease;
+    -o-animation: comming 3s ease;
+    animation: comming 3s ease;
+}
+
+.menu{
+    float:left;
+    padding-left: 432px;
+    z-index: 8;
+    
+}
+.menu li{
+     position: relative;
+    z-index: 9;
+        font-weight: bold;
+    float: left;
+    line-height: 60px;
+    color: #fff;
+    margin-right: 40px;
+    font-size: 16px;
+    text-transform: uppercase;
+       -webkit-animation: topshift  0.4s ease forwards;
+    -o-animation: topshift 0.4s ease forwards;
+    animation: topshift 0.4s ease forwards;
+    opacity: 0;
+    
+}
+
+               
+
+.main{
+    width: 100%;
+    height: 100%;
+    background: url(../img/ten.png) 90% 925px no-repeat, url(../img/Boy.png) 90% 100%/auto 85% no-repeat, url(../img/%D0%A4%D0%BE%D0%BD.jpg) center/cover no-repeat;
+}
+
+.title_container{
+    float: left;
+    margin: 432px 0px 0px 404px;
+    color: #2c384a;
+    text-align: center;
+    opacity: 0;
+    -webkit-animation: top 1s ease forwards;
+    -o-animation: top 1s ease forwards;
+    animation: top 1s ease forwards;
+    -webkit-animation-delay: 2s;
+    -o-animation-delay: 2s;
+    animation-delay: 2s; 
+}
+
+.title_container h1{
+    font-size: 60px;
+    font-weight: bold;
+}
+.title_container h4{
+    margin-top: 40px;
+    font-size:  22px;
+    color: #79818d;
+}
+
+
 .heading>h2{
     font-weight: bold;
     font-size:  30px;
@@ -85,13 +162,16 @@ nav {
     color: #6f707e;
     font-size:  13px;
     padding: 5px 5px 5px 30px;
-    background:  url(../img/%D0%B8%D0%BA%D0%BE%D0%BD%D0%BA%D0%B0.png) 10% 50% no-repeat;
+    background:  url(../img/%D0%B8%D0%BA%D0%BE%D0%BD%D0%BA%D0%B0.png) 7% 50% no-repeat;
     
 }
 
 .heading img{
        margin-left: 850px;
    margin-top: 60px;
+    -webkit-animation: p 2s;
+    -o-animation: p 2s;
+    animation: p 2s;
 }
 .foto img{
       margin-left: 915px;
@@ -109,6 +189,7 @@ nav {
 }
 .title_container1 {
   background:  url(../img/%D0%9F%D0%BE%D0%BB%D1%83%D1%84%D0%BE%D0%BD.jpg)  center/cover no-repeat;
+    height: 500px;
     }
 
 .foto1 img {
@@ -200,14 +281,381 @@ nav {
     max-width: 300px;
 }
 .heading3 h2{
-    float:left;
-    text-align: center;
-    margin-top: 500px;
+    margin-top: 105px;
+  text-align: center;
     font-weight: bold;
     color: #384354;
-    font-size:  30px;
-    margin-top: 1px;
-    padding-top: 100px;
+    font-size:  34px;
     height: 10px;
     text-transform: uppercase;
+}
+.fotoP1 img{
+    margin: 60px 0px 0px 915px;
+}
+.heading3 h4{
+    text-align: center;
+    margin-top: 30px
+}
+.fotoP2 img{
+    margin: 60px 0px 0px 350px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+}
+.textClient h3{
+    float:left;
+    margin-top: 38px;
+    margin-left: 350px;
+    margin-right: 150px;
+    color: #384354;
+    font-size:  25px;
+    font-family: Franklin Gothic Medium, sans-serif;
+    }
+.textProject h3{
+     font-size:  25px;
+      margin-top: 38px;
+}
+.textProject2 h3{
+    font-size:  17px;
+    margin-left: 585px;
+}
+.Compani a{
+    margin-left: 350px;
+    font-size:  17px;
+    font-family: Calibri, sans-serif;
+}
+.textWevsaite h3{
+    margin-left: 350px;
+    color: #384354;
+    font-size:  25px;
+    font-family: Franklin Gothic Medium, sans-serif;
+}
+.Compani2 a{
+    margin-left: 350px;
+    font-size:  17px;
+    font-family: Calibri, sans-serif;
+}
+.heading3 input{
+    margin-left: 350px;
+    text-align: center;
+    border: 0px solid #6d7682;
+    background: #63b5ae;
+    border-radius: 5px;
+    color: #fff;
+    font-size: 21px;
+    padding: 17px 44px;
+    margin-top: 20px;
+    
+}
+.heading4 h2{
+    color: #1c2534;
+    font-size:  46px;
+    text-align: center;
+     margin-top: 200px;
+}
+.typesite h3{
+    margin-top: 52px;
+    margin-left: 497px;
+    font-size:  30px;
+}
+.listoption select{
+    margin-top: 25px;
+    margin-left: 497px;
+    border: 10px solid #eee;
+    background: #eee;
+    padding: 20px 705px 17px 20px;
+    font-size:  17px;
+}
+.typedesign h3{
+     margin-top: 52px;
+    margin-left: 497px;
+    font-size:  30px;
+}
+.listdesign select{
+     margin-top: 25px;
+    margin-left: 497px;
+    border: 10px solid #eee;
+    background: #eee;
+    padding: 20px 721px 17px 20px;
+    font-size:  17px;
+}
+.typeadaptation h3{
+    margin-top: 52px;
+    margin-left: 497px;
+    font-size:  30px;
+}
+.listadaptation select{
+    margin-top: 25px;
+    margin-left: 497px;
+    border: 10px solid #eee;
+    background: #eee;
+    padding: 20px 770px 17px 20px;
+    font-size:  17px;
+}
+.heading4 img{
+    margin-top: 40px;
+    margin-left: 497px;
+
+}
+.line h3{
+    margin-left: 497px;
+    margin-top: 23px;
+    font-size:  21px;
+    font-weight: bold;
+}
+.price h3{
+    margin-left: 497px;
+    margin-top: 23px;
+    padding-bottom: 155px;
+    font-size:  21px;
+    font-weight: bold;
+}
+.headingstatistics h2{
+    padding-top: 105px;
+      font-size:  33px;
+      text-align: center;
+      font-family: Franklin Gothic Medium, sans-serif;
+      
+}
+.heading5 {
+    background:  url(../img/Polufon.jpg)  center/cover no-repeat;
+    height: 500px;
+}
+.Polosca img{
+    margin-top: 19px;
+    margin-left: 931px;
+}
+.icon img{
+    padding-top: 85px;
+    margin-left: 495px;
+     float:left;
+}
+.icon2 img{
+    padding-top: 85px;
+    margin-left: 235px;
+     float:left;
+}.icon3 img{
+    padding-top: 85px;
+    margin-left: 235px;
+     float:left;
+}
+.icon4 img{
+    padding-top: 85px;
+    margin-left: 235px;
+}
+.number h2{
+    float:left;
+     font-size:  38px;
+     font-weight: bold;
+padding-top: 30px;
+    margin-left: 490px;
+}
+.number2 h2{
+    float:left;
+     font-size:  38px;
+     font-weight: bold;
+padding-top: 30px;
+    margin-left: 220px;
+}
+.number3 h2{
+    float:left;
+     font-size:  38px;
+     font-weight: bold;
+padding-top: 30px;
+    margin-left: 215px;
+    padding-right: 245px;
+}
+.number4 h2{
+    
+     font-size:  38px;
+     font-weight: bold;
+padding-top: 30px;
+    
+}
+.inscription h3{
+    float:left;
+    font-size:  17px;
+    margin-top: 30px;
+    margin-left: 420px;
+    font-weight: 600;
+}
+.inscription2 h3{
+    float:left;
+    font-size:  17px;
+    margin-top: 30px;
+    margin-left: 110px;
+    font-weight: 600;
+}.inscription3 h3{
+    float:left;
+    font-size:  17px;
+    margin-top: 30px;
+    margin-left: 120px;
+    font-weight: 600;
+    padding-right: 100px;
+}.inscription4 h3{
+    
+    font-size:  17px;
+    margin-top: 30px;
+    font-weight: 600;
+}
+.heading6 h4{
+    padding-top: 100px;
+      font-size:  33px;
+      text-align: center;
+      font-family: Franklin Gothic Medium, sans-serif;
+}
+
+.Polosca5 img{
+    margin-top: 34px;
+    margin-left: 915px;
+}
+.Man img{
+    margin-top: 34px;
+    margin-left: 905px;
+}
+
+.heading6 h5{
+    text-align: center;
+    margin-top: 37px;
+    font-size:  17px;
+    
+
+}
+.heading6 h3{
+    text-align: center;
+    padding-top: 20px;
+     font-size:  17px;
+     padding-bottom: 150px;
+     
+}
+.heading7 h2{
+    padding-top: 100px;
+      font-size:  33px;
+      text-align: center;
+       color: #fff;
+      font-family: Franklin Gothic Medium, sans-serif;
+}
+.heading7 {
+    background:  url(../img/Fontemniy.jpg) no-repeat;
+    height: 811px;
+}
+.Polosca6 img{
+    margin-left: 910px;
+    margin-top: 30px;
+}
+.heading7 h3{
+    text-align: center;
+    color: #fff;
+    margin-top: 30px;
+}
+.smileGeo img{
+     margin-top: 45px;
+margin-left: 685px;
+float:left;
+}
+.smileConvert img{
+    margin-top: 45px;
+margin-left: 218px;
+float:left;
+}
+
+.smileTruba img{
+margin-top: 45px;
+margin-left: 218px;
+}
+.textgeo h4{
+    margin-top: 15px;
+    float:left;
+    color: #fff;
+     font-size:  17px;
+text-align: center;
+}
+.mail h4{
+    margin-top: 15px;
+    float:left;
+     color: #fff;
+     font-size:  17px;
+     padding-right: 100px;
+}
+.tell h4{
+    margin-top: 15px;
+     color: #fff;
+     font-size:  17px;
+}
+.textsms h4{
+    margin-top: 45px;
+     color: #fff;
+    font-size:  21px;
+    text-align: center;
+}
+.window1 input{
+      float:left;
+    margin-top: 45px;
+    margin-left: 600px; 
+    background: #d2d6dc;
+    padding: 10px 155px 10px 10px;
+}
+.window2 input{
+    margin-top: 45px;
+    margin-left: 30px; 
+    background: #d2d6dc;
+    padding: 10px 203px 10px 10px;
+}
+.heading7 textarea{
+margin-left: 600px;
+margin-top: 15px;
+background: #d2d6dc;
+padding: 10px 15px 10px 10px;
+}
+.letter input{
+margin-left: 885px;
+margin-top: 15px;
+padding: 8px 8px 8px 8px;
+border: 3px solid #fff;
+background: none;
+font-size:  21px;
+color: #fff;
+border-radius: 5px;
+}
+ 
+.network a{
+float:left;
+margin-left: 752px;
+margin-top: 75px;
+}
+.network2 a{
+float:left;
+margin-left: 55px;
+margin-top: 75px;
+}
+.network3 a{
+float:left;
+margin-top: 75px;
+margin-left: 55px;
+}
+.network4 a{
+float:left;
+margin-top: 75px;
+margin-left: 55px;
+}
+.network5 a{
+float:left;
+margin-top: 75px;
+margin-left: 55px;
+}
+.network6 a{
+    margin-top: 75px;
+margin-left: 55px;
+}
+.maps {
+   padding: 350px ;
+   border: 1px solid #000;
+
+}
+.strip {
+    width: 100%;
+    height: 95px;
+    background: #354051;
+    padding-top: 45px;
+    color: #fff;
+    text-align: center;
+    font-size: 14px;
 }
